# cmdcode

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  PLAN.problem-database.md  README.md  docker-compose.yml  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: deploy-server.yml  publish-cli.yml  secrets-scan.yml  security-scan.yml  test.yml
cli/: README.md  pyproject.toml
cli/cmdcode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli/src/cmdcode/: __init__.py  cli.py
cli/src/cmdcode.egg-info/: SOURCES.txt  top_level.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
infra/: cost_prediction.py  iam-policy-github-actions.json
judge/: docker-compose.yml  judge0.conf  judge0.conf.example  tmp.txt
problems/: README.md  build.py
problems/001-hello-world/: problem.json
problems/002-sum-two-numbers/: problem.json
problems/002-sum-two-numbers/tests/: 03.in
problems/003-fizzbuzz/: problem.json
problems/004-reverse-a-string/: problem.json
problems/004-reverse-a-string/tests/: 03.out
problems/005-palindrome-check/: problem.json
problems/005-palindrome-check/solutions/: solution.py
problems/005-palindrome-check/tests/: 05.in
problems/006-fibonacci-sequence/: problem.json
problems/007-two-sum/: problem.json
problems/008-count-words/: problem.json
server/: Dockerfile  database.py  main.py  models.py  problems.json  requirements.txt
tests/: conftest.py
tests/cli/: test_cli.py
tests/server/: conftest.py  test_api.py
(+8 files in other folders)
